<resources>
    <string name="app_name">SessionFragments</string>
    <string name="superman_name">Superman</string>
    <string name="batman_name">Batman</string>
    <string name="wonderwoman_name">Mujer Maravilla</string>
    <string name="flash_name">Flash</string>

    <string name="superman_powers">Súper fuerza, vuelo, invulnerabilidad, súper velocidad, visión de calor, aliento congelado, visión de rayos X, audición sobrehumana, factor de curación</string>
    <string name="batman_powers">Artista marcial excepcional, estrategia de combate, riqueza inagotable, habilidad deductiva brillante, tecnología avanzada</string>
    <string name="wonderwoman_powers">Súper fuerza, invulnerabilidad, vuelo, habilidad de combate, estrategia de combate, agilidad sobrehumana, factor de curación, armamento mágico</string>
    <string name="flash_powers">Súper velocidad, intangibilidad, agilidad sobrehumana</string>
    <string name="title_activity_bottom">BottomActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
</resources>