<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.superman.SupermanFragment">

    <TextView
        android:id="@+id/batman_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:text="@string/superman_name"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/batman_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/batman_name"
        android:paddingTop="16dp"
        android:src="@drawable/superman"
        app:srcCompat="@drawable/superman" />

    <TextView
        android:id="@+id/batman_powers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:paddingEnd="16dp"
        android:text="@string/superman_powers"
        android:textAlignment="textStart"
        android:textColor="@color/black" />

</LinearLayout>
